(fix)css issues

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/cccoil.svg" />
     <meta name="theme-color" content="#000000" />
-    <link href="/src/style.css" rel="stylesheet">
+    <link href="/src/styles.css" rel="stylesheet">
     <meta
       name="description"
       content="MidStream: A platform for managing and sharing your personal and professional connections."
